--- a/book_club/templates/book_club/books_by_category.html
+++ b/book_club/templates/book_club/books_by_category.html
@@ -33,4 +33,8 @@
   </div>
 
       <a class="btn btn-lg btn-block btn-outline-primary" href="{% url 'book_club:book_backlog' %}" role="button">📚 Books Currently In Progress</a>
+
+        {% if can_add_book %}
+            <a href="{% url 'book_club:add_new_book' %}" class="btn btn-outline-primary">Add New Book</a>
+        {% endif %}
 {% endblock content %}
